# CircleRushGame

./: CMakeLists.txt  Circle.h  Counter.cpp  Counter.h  Dispatcher.h  FoodSq.h  Game.cpp  GameTemplate.vcxproj  GameTemplate.vcxproj.filters  GeomMaster.cpp  GeomMaster.h  KillingSquare.h  Point.cpp  Point.h  PolygonDrawer.h  README.md  RingOfPlayer.h  Square.h
